Version 4.6

* IMPROVEMENT: KsiBlockSigner performance improvements
* FEATURE: Removed multi-signature support

2016-11-17 4.5.72

* IMPROVEMENT: HashTreeBuilder optimizations

2016-11-10 4.5.71

* FEATURE: Added a PDU v2 implementation.
* IMPROVEMENT: Replaced com.guardtime.ksi.service package in module ksi-api with com.guardtime.ksi.pdu package in ksi-service-client module.
* IMPROVEMENT: Added a KsiBlockSignerBuilder class. It is recommended to use this builder to create new instances of KsiBlockSigner.
* IMPROVEMENT: Improved RFC3161Record verification.
* IMPROVEMENT: Minor improvements.

Version 4.4

2016-10-10 4.4.67

* IMPROVEMENT: Now internal verification of the signature is performed in the following cases: new signature is created, existing signature is extended, signature is read from input stream.
* IMPROVEMENT: SHA1 hash algorithm status was changed from NOT_TRUSTED to NORMAL
* IMPROVEMENT: Improved user provided publication based verification policy
* BUGFIX: Fixed a typo in CAL-04 verification error text
* IMPROVEMENT: Replaced checked exceptions with runtime exception in DataHasher/DataHash/HashAlgorithm classes. 
* IMPROVEMENT: Method HashAlgorithm.getNamesList() was removed. Added a method with name HashAlgorithm.getImplementedHashAlgorithms()

Version 4.3

2016-09-12 4.3.55

* BUGFIX: Fixed a TCP client open file descriptors leak

2016-06-17 4.3.54

* IMPROVEMENT: Added stronger check for aggregation hash chain index consistency
* BUGFIX: Fixed a bug where server closed TCP connection due to inactivity and we did not close session in our side
* BUGFIX: Fixed a bug where TCP client had trouble splitting aggregator responses
* BUGFIX: Fixed a bug where TCP client CPU consumption didn't drop after high load
* IMPROVEMENT: Now publications file can be cached by using method KSIBuilder.setPublicationsFileCacheExpirationTime(..)
* BUGFIX: Fixed a bug where Calendar Hash Chain rule checked wrong links.
* FEATURE: Added support for local aggregation.
