@@ -116,7 +116,8 @@ public interface KSISignature {
     String getIdentity();
 
     /**
-     * Returns an array of the identities present in all aggregation hash chains.
+     * Returns an array of the identities present in all aggregation hash chains. The identities in the array are
+     * ordered - the higher-aggregator identity is before lower-aggregator identity.
      */
     Identity[] getAggregationHashChainIdentity();
 
