@@ -26,6 +26,7 @@ import com.guardtime.ksi.hashing.HashAlgorithm;
 import com.guardtime.ksi.publication.PublicationData;
 import com.guardtime.ksi.publication.inmemory.PublicationsFilePublicationRecord;
 import com.guardtime.ksi.unisignature.CalendarHashChain;
+import com.guardtime.ksi.unisignature.Identity;
 import com.guardtime.ksi.unisignature.KSISignature;
 import com.guardtime.ksi.util.Base16;
 import com.guardtime.ksi.util.Util;
@@ -51,6 +52,10 @@ public class InMemoryKsiSignatureTest {
     public void testSignatureContainsIdentity_Ok() throws Exception {
         KSISignature signature = load(TestUtil.load("signature/signature-with-mixed-aggregation-chains.ksig"));
         Assert.assertNotNull(signature.getIdentity());
+        Identity[] chainIdentity = signature.getAggregationHashChainIdentity();
+        Assert.assertNotNull(chainIdentity);
+        Assert.assertEquals(chainIdentity[0].getDecodedClientId(), "GT");
+        Assert.assertEquals(chainIdentity[chainIdentity.length-1].getDecodedClientId(), "anon");
     }
 
     @Test
