@@ -20,7 +20,6 @@
 package com.guardtime.ksi.unisignature.inmemory;
 
 import com.guardtime.ksi.tlv.TLVElement;
-import com.guardtime.ksi.unisignature.IdentityMetadata;
 import org.testng.annotations.Test;
 
 import static org.testng.Assert.assertEquals;
