@@ -21,7 +21,6 @@ package com.guardtime.ksi.blocksigner;
 
 import com.guardtime.ksi.exceptions.KSIException;
 import com.guardtime.ksi.hashing.DataHash;
-import com.guardtime.ksi.unisignature.IdentityMetadata;
 
 /**
  * A signer class to create block signatures. Methods {@link BlockSigner#add(DataHash, long, IdentityMetadata)}, {@link
