@@ -1,5 +1,6 @@
 Version 4.6
 
+* IMPROVEMENT: Now the Identity information is provided as an array in SDK. Old methods are deprecated. Moved class com.guardtime.ksi.unsiganture.IdentityMetadata to package com.guardtime.ksi.blocksigner.
 * IMPROVEMENT: KsiBlockSigner performance improvements
 * FEATURE: Removed multi-signature support
 
